# CMakeList.txt : CMake project for CMakeEspera, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CMakeEspera")

# Add source to this project's executable.
add_executable (CMakeEspera "CMakeEspera.cpp" "CMakeEspera.h")

# TODO: Add tests and install targets if needed.
